--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.Appdevproject2">
+        android:theme="@style/Theme.Appdevproject2"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".EditProduct"
+            android:exported="false" />
         <activity
             android:name=".RateProduct"
             android:exported="false" />
